# openecho

./: .env.example  .gitignore  main.py  pyproject.toml
skills/chatbot/: config.yaml  handler.py  prompt.md
skills/task-manager/: config.yaml  handler.py  prompt.md
src/: bot.py  bus.py  config_loader.py  dispatcher.py  logger.py  pending.py  queue.py  session.py
src/debug/: telegram.py  web.py
src/gateway/: buffer.py  fast_filter.py  intent_parser.py  responder.py  router.py  state_reader.py
src/input/: detector.py  forward.py  normalizer.py  stt.py  video_stt.py
src/log/: filter.py  indexer.py  raw.py
src/memory/: api.py  index.py  reader.py  vectors.py
src/scheduler/: db.py  scanner.py  timer.py
src/skill_runtime/: contract.py  llm.py  loader.py  tools.py
tests/: conftest.py  test_bot.py  test_buffer.py  test_bus.py  test_bus_integration.py  test_config_loader.py  test_contract.py  test_debug_telegram.py  test_debug_web.py  test_detector.py  test_dispatcher.py  test_fast_filter.py  test_forward.py  test_intent_parser.py  test_llm.py  test_log_filter.py  test_log_indexer.py  test_log_raw.py  test_logger.py  test_memory_api.py  test_memory_index.py  test_memory_reader.py  test_memory_vectors.py  test_normalizer.py  test_pending.py  test_queue.py  test_responder.py  test_router.py  test_scheduler_db.py  test_scheduler_scanner.py  test_scheduler_timer.py  test_session.py  test_session_integration.py  test_skill_loader.py  test_state_reader.py  test_stt.py  test_task_manager.py  test_task_manager_integration.py  test_tools.py  test_video_stt.py
(+2 files in other folders)
